current SVN version
	Isgl3dRender1/Isgl3dGenericShader: Fix bug with lighting when using views with and without light sources
	Isgl3dBillboardNode: Fix bug when using billboard node in scene graph
	Isgl3dTextureMaterial: simplified init API using default precision/no repeat
	Isgl3dGLTextureFactory: textures from non-factor-of-2 images (relevant uvs still need to be handled for meshes though)
	Added support files for integration with Cocos2d
	Isgl3dDirector: modified to allow UIViews (with OpenGL frame/render buffers) from other frameworks
	
version 1.2.0 (2011-05-04)
	Isgl3dPODImporter: fix bug in Isgl3dPODImporter (Issue #3)
	Isgl3dView: add method to convert 3D world position to 2D viewport point
	Tests added for keyframe mesh with primitive data and imported pod data
	Isgl3dKeyframeMesh: added to provide keyframe vertex animation of meshes
	Added touch event handling to particles (implementation with help from Massimiliano Rossi) 
	Isgl3dBillboardNode: modified to use meshes instead of particles. Use Isgl3dParticleNode for previous functionality.
	Isgl3dBillboard: removed. Use Isgl3dBillboardNode with any mesh
	TerrainPhysicsView: added demo of using a bullet height field terrain
	Isgl3dNode: use enums for occlusion mode
	Isgl3dSingleTouchFilter: fix bug in eventIds being released too early
	Isgl3dPODImporter: moved into main isgl3d target (keep .h from isgl3d.h to remove objective-m compilation errors)
	Added Xcode 4 templates, updated Xcode 3 templates
	Added demos for spring and follow cameras
	Isgl3dFollowCamera: fix bug in Isgl3dFollowCamera (Issue #2)
	Remove deprecated methods
	Isgl3dQuaternion: added
	Isgl3dNode: optimising recalculation of matrices
	Isgl3dNode: added pitch, yaw and roll to facilitate rotation of object about its local coordinate system
	Isgl3dNode: added properties for rotation, scale and position. Rotation can now be set independently along different axes